--- a/Enigmatrix_ML_APIs.ipynb
+++ b/Enigmatrix_ML_APIs.ipynb
@@ -216,7 +216,7 @@
         "import datetime\n",
         "\n",
         "# add you gemini api key\n",
-        "os.environ[\"GOOGLE_API_KEY\"] = \"AIzaSyC4jI65JhOuiwAOMxWp4jr8t21QfS4yaKM\"\n",
+        "os.environ[\"GOOGLE_API_KEY\"] = \""\n",
         "\n",
         "class RAGGeminiSystem:\n",
         "    def __init__(self):\n",
@@ -463,7 +463,7 @@
         "from pyngrok import ngrok\n",
         "\n",
         "\n",
-        "NGROK_AUTH_TOKEN = \"2yOx2C2BBKtqBg9bLKaX1lQaGed_4VukuznYZCdxbFJSyWx6j\"  # Replace this with your own token\n",
+        "NGROK_AUTH_TOKEN = \"\"  # Replace this with your own token\n",
         "ngrok.set_auth_token(NGROK_AUTH_TOKEN)\n",
         "# Create a public URL\n",
         "public_url = ngrok.connect(8056)\n",
