--- a/Enigmatrix_ML_APIs.ipynb
+++ b/Enigmatrix_ML_APIs.ipynb
@@ -216,8 +216,7 @@
         "import datetime\n",
         "\n",
         "# add you gemini api key\n",
-        "os.environ[\"GOOGLE_API_KEY\"] = \""\n",
-        "\n",
+        "os.environ[\"GOOGLE_API_KEY\"] = \"your_key_here\"\n",
         "class RAGGeminiSystem:\n",
         "    def __init__(self):\n",
         "        self.embedding_model = None\n",
@@ -463,7 +462,7 @@
         "from pyngrok import ngrok\n",
         "\n",
         "\n",
-        "NGROK_AUTH_TOKEN = \"\"  # Replace this with your own token\n",
+         "NGROK_AUTH_TOKEN = \"your_actual_token_here\" # Replace this with your own token\n",
         "ngrok.set_auth_token(NGROK_AUTH_TOKEN)\n",
         "# Create a public URL\n",
         "public_url = ngrok.connect(8056)\n",
